增加了对二维码信息的处理，和对bmob上图片的获取  2016/3/22  14:10

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="back">退出</string>
     <string name="toolbar_text_example">主页</string>
     <string name="example_location_city">重庆</string>
+    <string name="add_vehicle_information">添加车辆信息</string>
 
 </resources>
