--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,6 @@
     <string name="toolbar_text_example">主页</string>
     <string name="example_location_city">重庆</string>
     <string name="add_vehicle_information">添加车辆信息</string>
+    <string name="peccay_text">违章信息查询</string>
 
 </resources>
