2016/3/29  15:09  完成了启动页的制作

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="example_location_city">重庆</string>
     <string name="add_vehicle_information">添加车辆信息</string>
     <string name="peccay_text">违章信息查询</string>
+    <string name="sample_text"></string>
 
 </resources>
