--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,8 @@
     <string name="add_vehicle_information">添加车辆信息</string>
     <string name="peccay_text">违章信息查询</string>
     <string name="sample_text"></string>
+    <string name="limit_code">0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@()%&amp;*#/~?!:;\'-_,."+-$^&amp;</string>
+    <string name="limit_phone">+0123456789*#</string>
+    <string name="auth_code">0123456789</string>
 
 </resources>
